# pokemon

./: .gitignore  LICENSE  Makefile  README.md  algo_chat.py  algo_turn.py  atom.py  chat.js  core.py  daemon.atom.sh  daemon.chat.sh  daemon.config.yml  daemon.ranger_claw.sh  daemon.ranger_fox.sh  daemon.runtime_chat.sh  daemon.runtime_fox.sh  daemon.runtime_sina.sh  daemon.runtime_turn.sh  daemon.runtime_wechat.sh  daemon.shadow.sh  fix_data.py  init.py  package.json  predict_op.py  pyproject.toml  ranger_claw.py  ranger_fox.py  run.py  runtime_chat.py  runtime_email.py  runtime_fox.py  runtime_sina.py  runtime_turn.py  runtime_vol.py  runtime_wechat.py  screenshot.py  sqliteDB.py  test_all.py  util.py
daemon/: algo_chat.sh  algo_turn.sh  atom.sh  runtime_email.sh
data/: chat_config.toml.example
mars/: akshare.py  jsonDB.py  util.py  webDB.py
models/: akshare.py  demjson.py  jsonDB.py  pickleDB.py  sqliteDB.py  util.py  webDB.py
static/: Analytics_baidu.js  itchat_uos-1.5.0.dev0-py3-none-any.whl  mate.css  preloader.css
static/assets/css/: 404.css  home.css
static/assets/images/: 404.webm
templates/: 404.html  chat_index.html  hist.html  home.html  op_IC.html  op_IF.html  op_IH.html  op_IM.html  op_focus.html  op_fox.html  op_hist.html  op_hive.html  op_horizon.html  op_phone.html  op_plot.html  op_test.html  op_tomato.html  pedding.html  pedding2.html  upload.html
templates/components/: analytics.html  footer.html  meta.html  navbar.html  preload.html  script.html  uploadinput.html
test/chat/: Tesla_down.json  Tesla_normal.json  Tesla_up.json  send_down.json  send_up.json
test/material/: chat_config.json  nightly_data.json  sina_op_config.json  sina_option_data.json
test/opening/: fox_data.json
