[tool.poetry]
name = "pokemon"
version = "0.1.0"
description = ""
authors = ["gaoming714 <gaoming714@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
pendulum = "^2.1.2"
Flask = "^3.0.0"
redis = "^4.5.5"
pandas = "^2.0.1"
plotly = "^5.14.1"
loguru = "^0.7.2"
Envelopes = "^0.4"
scikit-opt = "^0.6.6"
rich = "^13.5.2"
pytest = "^7.4.2"
freezegun = "^1.2.2"
itchat-uos = {path = "static/itchat_uos-1.5.0.dev0-py3-none-any.whl"}
coverage = "^7.3.1"
flask-login = "^0.6.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
