[tool.poetry]
name = "pokemon"
version = "0.1.0"
description = ""
authors = ["gaoming714 <gaoming714@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
pendulum = "^3.0.0"
Flask = "^3.0.3"
redis = "^5.0.3"
pandas = "^2.0.1"
tqdm = "^4.66.4"
plotly = "^5.14.1"
loguru = "^0.7.2"
Envelopes = "^0.4"
scikit-opt = "^0.6.6"
rich = "^13.5.2"
pytest = "^8.1.1"
freezegun = "^1.2.2"
itchat-uos = {path = "static/itchat_uos-1.5.0.dev0-py3-none-any.whl"}
coverage = "^7.3.1"
flask-login = "^0.6.3"
pytest-mock = "^3.14.0"
statsmodels = "^0.14.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
